# calf-enhance

./: .env  .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENCE  README.md  RobotNavigationConstSpeedCatch-v0.tex  docker-compose.yaml  ellipse_plot.py  find_alpha.py  main.ipynb  main.py  mlflow.Dockerfile  mlflow_smoke.py  pyproject.toml  test.py
.uvenv/: pyvenv.cfg
examples/: underwater_drone_demo.py
plotting/: README.md  plot_ablation_episode_return_drone_robot.py  plot_backbone_comparison_drone.py  plot_goal_reaching_rate_comparison.py  plot_graphical_abstract_agency.py  verify_robot_nominal_eval.py
reproduce/: train_calf_enhance_5seeds.sh  train_td3_residual_5seeds.sh
run/: .cursorignore  .gitignore  ablation-study-underwater-selective-v2.ipynb  ablation-study-underwater-selective.ipynb  ablation-study-v2.ipynb  ablation-study.ipynb  analysis-v2.ipynb  analysis.ipynb  eval_mpc.py  eval_nominal.py  eval_nominal_robot_const_speed.py  json_to_video.py  robot_dynamics_controller_rollout.py  robot_nav_const_speed_nominal_video.py  robot_nav_const_speed_rollout.py  robot_nav_controller_rollout.py  stack_videos.sh  train_calf_enhance.py  train_calfq.py  train_calfq2.py  train_calfq_5seeds.sh  train_ppo.py  train_ppo_calfq.py  train_ppo_residual.py  train_purecalfq_5seeds.sh  train_sac.py  train_sac_calfq.py  train_sac_residual.py  train_td3.py  train_td3_5seeds.sh  train_td3_residual.py
scl-plotting/: .gitignore  README.md  generate_final_metrics_tables.py  plot_ablation_baseline_calls_robot.py  plot_all.py  plot_backbone_comparison_robot.py  plot_baseline_policy_calls_percent.py  plot_schedule_parameters.py  (+1 more)
(+117 files in other folders)
