[project]
name = "calfq-td3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black[jupyter]>=25.1.0",
    "gitpython>=3.1.44",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.3",
    "moviepy>=2.1.2",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pygame>=2.6.1",
    "rich>=14.0.0",
    "scienceplots>=2.1.1",
    "stable-baselines3==2.0.0",
    "torch>=2.6.0",
    "tyro>=0.9.19",
]



[tool.poetry]
packages = [
    { include = "src" },
    { include = "run" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
